2013-01-04  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* patches/boot/use_target_6_for_bootstrap_classes.patch:
	Fixed build failure caused by changes in one Makefile altered by this
	patch (make/sun/rmi/rmi/Makefile).

2013-01-03  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* patches/nss-not-enabled-config.patch:
	Removed; included upstream.
	* Makefile.am:
	(OPENJDK_VERSION): Bump to b06.
	(CORBA_CHANGESET): Update to IcedTea7 forest head.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(OPENJDK_TREE): Also depend on add-nss.
	(ICEDTEA_PATCHES): Drop nss-not-enabled-config.patch
	(clean-local): Remove clean-add-nss-debug.
	(.PHONY): Remove clean-add-nss-debug and clean-add-nss-boot.
	(add-nss): Copy nss.cfg into source tree rather than build tree.
	(clean-add-nss): Matching change to cleanup rule.
	(add-nss-debug): No longer needed.
	(clean-add-nss-debug): Likewise.
	(icedtea-stage2): Remove dependence on add-nss.
	(icedtea-debug-stage2): Likewise for add-nss-debug.
	(add-nss-boot): No longer needed.
	(clean-add-nss-boot): Likewise.
	(clean-icedtea-stage1): Remove clean-add-nss-boot.
	* hotspot.map:
	Update default to latest HotSpot in IcedTea7 forest.
	* patches/nss-config.patch:
	Update due to changes upstream & addition of
	not enabled configuration to unpatched forest.

2010-09-24  Andrew John Hughes  <gnu.andrew@redhat.com>

	* Makefile.am:
	(.PHONY): Add new clean targets.  Fix name.
	(add-systemtap-boot): Add SystemTap support to the boot build.
	(clean-add-systemtap-boot): Remove SystemTap support from the boot build.
	(add-pulseaudio-boot): New target to add PulseAudio support to the boot build.